--- a/www/src/index.html
+++ b/www/src/index.html
@@ -168,7 +168,7 @@
       </section>
     </main>
     <script type="module" src="./js/script.js"></script>
-    <script type="module" src="./js/video.jsx"></script>
+    <script type="module" src="./js/video.js"></script>
     <script type="module" src="./js/background.js"></script>
   </body>
   <style></style>
