--- a/www/src/index.html
+++ b/www/src/index.html
@@ -18,7 +18,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <link rel="icon" href="./assets/logo.png" />
+    <link rel="icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -145,7 +145,7 @@
                   width: 100%;
                   height: 100%;
                   object-fit: cover;
-                  transform: translateX(-2px);
+                  transform: translateX(2px);
                 "
               />
             </div>
